--- a/login.css
+++ b/login.css
@@ -37,6 +37,7 @@
     text-align: center;
 }
 
+
 .remmber {
   display: inline-flex;
   align-items: center;
@@ -93,7 +94,7 @@
 .box h2{
 color: rgb(0, 217, 255);
 position: absolute;
-    bottom: 30rem;          
+    bottom: 33rem;          
     right: 43rem;
 
 }
@@ -104,4 +105,44 @@ position: absolute;
 
 
 
+.agreement-radio {
+  margin-top: 15px;
+  text-align: left;
+  font-size: 13px;
+  color: #555;
+}
+
+.agreement-radio p {
+  margin-bottom: 8px;
+  color: #333;
+}
+
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 6px;
+  padding-left: 5px;
+}
+
+.radio-group label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 13px;
+  color: #333;
+  white-space: nowrap;
+}
+
+.radio-group input[type="radio"] {
+  accent-color: #0066ff;
+}
+.agreement-radio a {
+  color: #0066ff;
+  text-decoration: none;
+}
+
+.agreement-radio a:hover {
+  text-decoration: underline;
+}
 
